oml: rename to 'lambda'